trunk/NewArchive/a880feaf51009d8525b086d5cc8e0ab8-acc21326bddb78ffadef615690276e19/output
+ clang++ -std=c++11 -O2 main.cpp
main.cpp:11:8: error: redefinition of 'Person'
struct Person
       ^
./../../Archive/e961528d7fdc68489cee49198ea05779-534195fc16222e0ad72c37b647d12335/main.cpp:21:8: note: previous definition is here
struct Person
       ^
1 error generated.
